<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>io.github.agdturner</groupId>
    <artifactId>ccg-vector3d</artifactId>
    <version>0.9-SNAPSHOT</version>
    <packaging>jar</packaging>
    
    <name>ccg-vector3d</name>
    <url>https://github.com/agdturner/ccg-vector3d</url>
    <description>A Java Library for handling 3D spatial vector data.</description>
    <scm>
        <url>git@github.com:agdturner/ccg-vector3d.git</url>
        <connection>scm:git:git@github.com:agdturner/ccg-vector3d.git</connection>
        <developerConnection>scm:git:git@github.com:agdturner/ccg-vector3d</developerConnection>
        <tag>ccg-vector3d-0.9</tag>
    </scm>
    <licenses>
        <license>
            <name>APACHE LICENSE, VERSION 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>
    <organization>
        <name>Centre for Computational Geography</name>
        <url>http://www.ccg.leeds.ac.uk/</url>
    </organization>
    <developers>
        <developer>
            <id>agdturner</id>
            <name>Andy Turner</name>
            <email>a.g.d.turner@leeds.ac.uk</email>
            <organization>Centre for Computational Geography, University of Leeds</organization>
            <organizationUrl>http://www.ccg.leeds.ac.uk/</organizationUrl>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
    </developers>
    
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <ccg-generic.version>2.1</ccg-generic.version>
        <ccg-io.version>1.1.0</ccg-io.version>
        <ccg-math.version>2.0.8</ccg-math.version>
        <big-math.version>2.3.0</big-math.version>
        <!--
        <ojalgo.version>48.0.0</ojalgo.version>
        <ojalgo.version>48.3.2</ojalgo.version>
        -->
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <maven.version>3.0.1</maven.version>
        <junit.version>5.7.0</junit.version>
        <!--
        <hamcrest.version>2.2</hamcrest.version>
        -->
    </properties>
    
    <dependencies>
        <!-- https://mvnrepository.com/artifact/io.github.agdturner/ccg-generic -->
        <dependency>
            <groupId>io.github.agdturner</groupId>
            <artifactId>ccg-generic</artifactId>
            <version>${ccg-generic.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/io.github.agdturner/ccg-io -->
        <dependency>
            <groupId>io.github.agdturner</groupId>
            <artifactId>ccg-io</artifactId>
            <version>${ccg-io.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/io.github.agdturner/ccg-math -->
        <dependency>
            <groupId>io.github.agdturner</groupId>
            <artifactId>ccg-math</artifactId>
            <version>${ccg-math.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/ch.obermuhlner/big-math -->
        <dependency>
            <groupId>ch.obermuhlner</groupId>
            <artifactId>big-math</artifactId>
            <version>${big-math.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.ojalgo/ojalgo -->
        <!--
        <dependency>
            <groupId>org.ojalgo</groupId>
            <artifactId>ojalgo</artifactId>
            <version>${ojalgo.version}</version>
        </dependency>
        -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.6.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.6.0</version>
            <scope>test</scope>
        </dependency>
        <!--
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-library</artifactId>
            <version>${hamcrest.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <scope>test</scope>
            <version>2.44.0</version>
        </dependency>
        <dependency>
            <groupId>com.opera</groupId>
            <artifactId>operadriver</artifactId>
            <scope>test</scope>
            <version>1.5</version>
            <exclusions>
                <exclusion>
                    <groupId>org.seleniumhq.selenium</groupId>
                    <artifactId>selenium-remote-driver</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>5.6.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <compilerArgs>
                        <arg>-verbose</arg>
                        <arg>-Xlint:all,-options,-path</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M4</version>
                <configuration>
                    <argLine>-Xms256m</argLine>
                </configuration>
                <!--
                <version>2.22.2</version>
                -->
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.0.0-M4</version>
                <!--
                <version>2.22.2</version>
                -->
            </plugin>
        </plugins>
    </build>
            
    <profiles>
        <profile> 
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.sonatype.plugins</groupId>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                        <version>1.6.8</version>
                        <extensions>true</extensions>
                        <configuration>
                            <serverId>ossrh</serverId>
                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
                        </configuration>
                    </plugin>          
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>3.8.1</version>
                        <configuration>
                            <compilerArgs>
                                <arg>-verbose</arg>
                                <arg>-Xlint:all,-options,-path</arg>
                            </compilerArgs>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>3.0.0-M4</version>
                        <configuration>
                            <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=512m</argLine>
                        </configuration>
                        <!--
                        <version>2.22.2</version>
                        -->
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <version>3.0.0-M4</version>
                        <!--
                        <version>2.22.2</version>
                        -->
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.2.0</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.1.1</version>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.5</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    
    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <!--
        <repository>
            <id>internal</id>
            <url>file://${project.build.directory}/mvn-repo</url>
        </repository>
        -->
        <repository>
            <id>github</id>
            <name>GitHub agdturner Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/agdturner/ccg-vector3d</url>
        </repository>
        <!--
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
        -->
        
    </distributionManagement>
</project>